--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -79,8 +79,8 @@
                 </div>
               </div>
               <div class="card-body">
-                <h6>{{p.description.substr(0, 40)}} ....</h6>
-                <p class="lead">{{p.price | currency:'EUR'}}</p>
+                
+                <p class="lead">{{p.price | currency:'RON'}}</p>
               </div>
 
               <div class="row d-flex justify-content-center border-primary my-3">
