--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -25,7 +25,7 @@
             </td>
             <td><p>{{c.product.name}}</p></td>
             <td>
-              <p>{{c.product.price | currency:'EUR'}}</p>
+              <p>{{c.product.price | currency:'RON'}}</p>
             </td>
             <td>
               <form>
@@ -39,7 +39,7 @@
               </form>
             </td>
             <td>
-              <p>{{cartService.CalculateSubTotal(i) | currency:'EUR'}}</p>
+              <p>{{cartService.CalculateSubTotal(i) | currency:'RON'}}</p>
             </td>
           </tr>
           <tr class="border-0">
@@ -47,7 +47,7 @@
             <td></td>
             <td></td>
             <td>TOTAL</td>
-            <td>{{cartTotal | currency:'EUR'}}</td>
+            <td>{{cartTotal | currency:'RON'}}</td>
 
           </tr>
 
