--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -130,7 +130,7 @@
         </div>
         <div class="order-col dropdown-divider">
           <div><strong>TOTAL</strong></div>
-          <div><strong class="order-total">{{cartTotal | currency:'EUR'}}</strong></div>
+          <div><strong class="order-total">{{cartTotal | currency:'RON'}}</strong></div>
         </div>
       </div>
       <div class="payment-method">
