--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="col-md-4 col-sm-6" *ngFor="let p of products">
             <div class="card my-2">
-              <img [src]="p.image" alt="{{p.name}}" width="200px" class="card-img-top" (click)="selectProduct(p.id)" style="cursor:pointer;">
+              <img [src]="p.image" alt="{{p.name}}" width="200px" class="card-img-top"  style="cursor:pointer;" (click)="selectProduct(p.id)">
               <div class="card-header">
                 <div class="card-title">
                   <p>{{p.name | titlecase}}</p>
