--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -94,13 +94,13 @@
             <li><a href="#">{{product?.category}}</a></li>
           </ul>
 
-          <ul class="product-links">
+         <!--  <ul class="product-links">
             <li>Share:</li>
             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
             <li><a href="#"><i class="fa fa-twitter"></i></a></li>
             <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
             <li><a href="#"><i class="fa fa-envelope"></i></a></li>
-          </ul>
+          </ul> -->
 
         </div>
       </div>
@@ -344,19 +344,15 @@
             </div>
           </div>
           <div class="product-body">
-            <p class="product-category">Category</p>
-            <h3 class="product-name"><a href="#">product name goes here</a></h3>
-            <h4 class="product-price">80.00
-              <del class="product-old-price">90.00</del>
+            <p class="product-category">Make-up</p>
+            <h3 class="product-name"><a href="#">Paleta Huda Beauty</a></h3>
+            <h4 class="product-price">175
+              <del class="product-old-price">250</del>
             </h4>
             <div class="product-rating">
             </div>
             <div class="product-btns">
-              <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span>
-              </button>
-              <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span>
-              </button>
-              <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+              
             </div>
           </div>
           <div class="add-to-cart">
@@ -370,30 +366,22 @@
       <div class="col-md-3 col-xs-6">
         <div class="product">
           <div class="product-img">
-            <img alt="" src="assets/img/product02.png">
+            <img alt="" src="assets/img/product05.png">
             <div class="product-label">
               <span class="new">NEW</span>
             </div>
           </div>
           <div class="product-body">
-            <p class="product-category">Category</p>
-            <h3 class="product-name"><a href="#">product name goes here</a></h3>
-            <h4 class="product-price">80.00
-              <del class="product-old-price">90.00</del>
+            <p class="product-category">Bath and Body</p>
+            <h3 class="product-name"><a href="#">Set bath and body</a></h3>
+            <h4 class="product-price">110
+              <del class="product-old-price">140</del>
             </h4>
             <div class="product-rating">
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
+              
             </div>
             <div class="product-btns">
-              <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span>
-              </button>
-              <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span>
-              </button>
-              <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+              
             </div>
           </div>
           <div class="add-to-cart">
@@ -412,24 +400,16 @@
             <img alt="" src="assets/img/product03.png">
           </div>
           <div class="product-body">
-            <p class="product-category">Category</p>
-            <h3 class="product-name"><a href="#">product name goes here</a></h3>
-            <h4 class="product-price">80.00
-              <del class="product-old-price">90.00</del>
+            <p class="product-category">Make-up</p>
+            <h3 class="product-name"><a href="#">Set Benefit</a></h3>
+            <h4 class="product-price">185
+              <del class="product-old-price">220</del>
             </h4>
             <div class="product-rating">
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star"></i>
-              <i class="fa fa-star-o"></i>
+              
             </div>
             <div class="product-btns">
-              <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span>
-              </button>
-              <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span>
-              </button>
-              <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+              
             </div>
           </div>
           <div class="add-to-cart">
@@ -446,19 +426,15 @@
             <img alt="" src="assets/img/product04.png">
           </div>
           <div class="product-body">
-            <p class="product-category">Category</p>
-            <h3 class="product-name"><a href="#">product name goes here</a></h3>
-            <h4 class="product-price">80.00
-              <del class="product-old-price">90.00</del>
+            <p class="product-category">Make-up</p>
+            <h3 class="product-name"><a href="#">Paleta blush Too faced</a></h3>
+            <h4 class="product-price">160
+              <del class="product-old-price">180</del>
             </h4>
             <div class="product-rating">
             </div>
             <div class="product-btns">
-              <button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span>
-              </button>
-              <button class="add-to-compare"><i class="fa fa-exchange"></i><span class="tooltipp">add to compare</span>
-              </button>
-              <button class="quick-view"><i class="fa fa-eye"></i><span class="tooltipp">quick view</span></button>
+              
             </div>
           </div>
           <div class="add-to-cart">
