--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -35,16 +35,16 @@
           <div class="footer">
             <h3 class="footer-title">Information</h3>
             <ul class="footer-links">
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact Us</a></li>
-              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="/header">About Us</a></li>
+              <li><a href="/header">Contact Us</a></li>
+              
             </ul>
           </div>
         </div>
 
         <div class="col-md-3 col-xs-6">
           <div class="footer">
-            <h3 class="footer-title">Service</h3>
+            
             <ul class="footer-links">
               <li><a href="#">My Account</a></li>
               <li><a href="http://localhost:4200/cart">View Cart</a></li>
