--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<!-- SECTION -->
+ <!-- SECTION -->
 <div class="section">
   <!-- container -->
   <div class="container">
@@ -6,27 +6,28 @@
     <div class="row">
       <!-- shop -->
       <div class="col-md-4 col-xs-6">
-        <div class="shop">
+        <div class="shop" >
           <div class="shop-img">
             <img src="./../../../assets/img/shop01.png" alt="">
           </div>
-          <div class="shop-body">
+          <div class="shop-body" >
             <h3>Make-up</h3>
-            <a href="#" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="/category" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
       </div>
       <!-- /shop -->
 
       <!-- shop -->
-      <div class="col-md-4 col-xs-6">
+      <div class="col-md-4 col-xs-6" >
         <div class="shop">
           <div class="shop-img">
             <img src="./../../../assets/img/shop03.png" alt="">
           </div>
           <div class="shop-body">
             <h3>Bath and Body Sets</h3>
-            <a href="#" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
+            
+            <a href="/category" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
       </div>
@@ -40,7 +41,7 @@
           </div>
           <div class="shop-body">
             <h3>Perfumes</h3>
-            <a href="#" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="/category" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
       </div>
