--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -27,7 +27,7 @@
           <div class="shop-body">
             <h3>Bath and Body Sets</h3>
             
-            <a href="products/category"  class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
+            <a href="/category" class="cta-btn">Shop now <i class="fa fa-arrow-circle-right"></i></a>
           </div>
         </div>
       </div>
