--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -91,7 +91,7 @@
 
           <ul class="product-links">
             <li>Category:</li>
-            <li><a href="#">{{product?.category}}</a></li>
+            <li><a href="/category">{{product?.category}}</a></li>
           </ul>
 
          <!--  <ul class="product-links">
