--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
         <li><a href="#"><i class="fa fa-map-marker"></i> Str. Vasile Parvan nr. 8</a></li>
       </ul>
       <ul class="header-links pull-right">
-        <li><a href="#"><i class="fa fa-euro"></i> RON</a></li>
+        <li><a href="#"> RON</a></li>
         <li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
       </ul>
     </div>
